--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "type": "module",
   "dependencies": {
+    "bot-sdk": "^1.2.15",
+    "chatgpt": "^5.2.4",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.0",
-    "koa-router": "^12.0.0",
-    "chatgpt": "^5.2.4"
+    "koa-router": "^12.0.0"
+  },
+  "devDependencies": {
+    "@tsconfig/node18": "^2.0.1",
+    "eslint": "^8.41.0",
+    "eslint-plugin-react": "^7.32.2",
+    "typescript": "^5.0.4"
   }
 }
